--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,15 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <!--
     <Button
         android:id="@+id/buttonConnect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/nameButtonConnect"
         android:backgroundTint="@color/stdButtonBg"
-        android:textColor="@color/white"/>
-    -->
+        android:textColor="@color/white"
+        android:visibility="invisible"/>
+
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
